scrollbar all intero main, header fixed sopra, effetto blur all header, primo elemento della main-content navbar active, cambiata transizione hover nelle cards: usato opacity invece di visibility

--- a/css/style.css
+++ b/css/style.css
@@ -201,7 +201,7 @@ SIDEBAR
     padding-top: 15px;
     padding-bottom: 5px;
     position: relative;
-    /* overflow: auto; */
+    z-index: 10000;
 }
 
 #sidebar .logo {
@@ -298,8 +298,10 @@ SIDEBAR
 /* upper content MAIN */
 main {
     flex: 1 1 auto;
-    /* overflow: auto; */
-    /*per scrollbar anche header -> modificare position header in fixed in alto*/
+    /*per scrollbar anche header
+    * decommentare overflow auto in main-content
+    * modificare position header in fixed in alto
+    * -> dare del padding-top alto quanto l'header + il p-block-md al main-content */
 }
 
 /*********************************************************
@@ -308,14 +310,23 @@ MAIN HEADER
 
 ***********************************************************/
 main .header {
-    background: #0c1018;
+    background: #0c1018aa;
     height: var(--height-header);
-    position: relative;
+    /* per scrollbar anche header */
+    width: 100%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 1000;
+    box-shadow: 0 2px 10px hsla(0, 0%, 0%, 0.5);
+    backdrop-filter: blur(5px);
+    /* overflow: hidden; */
 }
 
 /* posizione bottone header */
 .header .btn {
     position: absolute;
+    z-index: 5000;
     right: 35px;
     top: 50%;
     transform: translateY(-50%);
@@ -332,11 +343,12 @@ MAIN CONTENT
 ***********************************************************/
 
 /* main content ha un altezza fissata calcolata come 
-spazio rimanente nella schermata tolti header e footer*/
-/* all'overflow del suo contenuto compare la barra di scorrimento */
+spazio rimanente nella schermata tolto footer*/
 main .main-content {
     background: var(--color-dark);
-    height: calc(100dvh - (var(--height-header) + var(--height-footer)));
+    /* per scrollbar anche header */
+    height: calc(100dvh - (var(--height-footer)));
+    padding-top: calc(var(--height-header) + var(--p-block-md));
     overflow-y: auto;
 }
 
@@ -349,7 +361,8 @@ main .main-content {
     position: relative;
 }
 
-.main-content .main-nav li:hover {
+.main-content .main-nav li:hover,
+.main-nav li:first-child {
     color: var(--color-light);
 }
 
@@ -401,11 +414,12 @@ main .main-content {
     justify-content: center;
     align-items: center;
     background: rgba(0, 0, 0, 0.5);
-    visibility: hidden;
+    opacity: 0;
+    transition: all .25s linear;
 }
 
 .card-image:hover i {
-    visibility: visible;
+    opacity: 1;
 }
 
 .card-list .playlist-title {
@@ -532,18 +546,15 @@ footer .bar {
 
 
 /* SCROLLBAR */
-.main-content::-webkit-scrollbar,
-.playlist ul::-webkit-scrollbar {
+::-webkit-scrollbar {
     width: 8px;
 }
 
-.main-content::-webkit-scrollbar-track,
-.playlist ul::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
     box-shadow: inset 0 0 10px rgb(0, 0, 0.5);
 }
 
-.main-content::-webkit-scrollbar-thumb,
-.playlist ul::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
     background-color: var(--color-highlight);
     border-radius: 10px;
 }
